sorting out buttons and functions

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class='playerDiv active' id='playerLeft'>
             <h2 class='playerName'  id='nameLeft'>Player One</h2>
             <div class='nowplaying'>NOW PLAYING!</div>
-            <h3 class='playerScore' id='leftScore'>75</h3>
+            <div class=bankedScore>
+                <h3>Banked Score</h3>
+                <h3 class='playerScore' id='total-0'>75</h3>
+            </div>
             <div class="currentScoreDisplay">
                 <div class='playerCurrentText'>Current Score</div>
                 <div class='playerCurrentScore'id='current-0'>3</div>
@@ -28,7 +31,10 @@
     <div class='playerDiv' id='playerRight'>
             <h2 class='playerName' id='nameRight'>Player Two</h2>
             <div class='nowplaying'>NOW PLAYING!</div>
-            <h3 class='playerScore' id='rightScore'>60</h3>
+            <div class=bankedScore>
+                <h3>Banked Score</h3>
+                <h3 class='playerScore' id='total-1'>60</h3>
+            </div>
             <div class="currentScoreDisplay">
                 <div class='playerCurrentText'>Current Score</div>
                 <div class='playerCurrentScore' id='current-1'>2</div>
