--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Dice </title>
-    <link rel="stylesheet" type="text/css" href="main.css">.
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="main.css">.
 </head>
 <body>
 <div class='wrapper'>
-    <div class='playerDiv active' id='playerLeft'>
+    <div class='playerDiv' id='playerLeft'>
             <h2 class='playerName'  id='nameLeft'>Player One</h2>
             <div class='nowplaying'>NOW PLAYING!</div>
             <div class=bankedScore>
                 <h3>Banked Score</h3>
-                <h3 class='playerScore' id='total-0'>75</h3>
+                <h3 class='playerScore' id='total-0'>0</h3>
             </div>
             <div class="currentScoreDisplay">
                 <div class='playerCurrentText'>Current Score</div>
-                <div class='playerCurrentScore'id='current-0'>3</div>
+                <div class='playerCurrentScore'id='current-0'>0</div>
             </div>
     </div>
 
@@ -33,11 +34,11 @@
             <div class='nowplaying'>NOW PLAYING!</div>
             <div class=bankedScore>
                 <h3>Banked Score</h3>
-                <h3 class='playerScore' id='total-1'>60</h3>
+                <h3 class='playerScore' id='total-1'>0</h3>
             </div>
             <div class="currentScoreDisplay">
                 <div class='playerCurrentText'>Current Score</div>
-                <div class='playerCurrentScore' id='current-1'>2</div>
+                <div class='playerCurrentScore' id='current-1'>0</div>
             </div>
     </div>
 
